[package]
name = "velvet"
version = "0.5.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2021"
repository = "https://github.com/seatonullberg/velvet"
description = "Velvet is a classical atomistic simulation engine with a focus on user-friendliness and extensibility."
license = "MIT"
keywords = [
    "chemistry",
    "materials-science",
    "molecular-dynamics",
    "physics",
]
categories = [
    "science",
    "simulation",
]

[dependencies]
