[package]
name = "velvet"
version = "0.5.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2021"
repository = "https://github.com/seatonullberg/velvet"
description = "Velvet is a classical atomistic simulation engine with a focus on user-friendliness and extensibility."
license = "MIT"
keywords = [
    "chemistry",
    "materials-science",
    "molecular-dynamics",
    "physics",
]
categories = [
    "science",
    "simulation",
]

[dependencies]
chemfiles = "0.10.3"
itertools = "0.10.5"
nalgebra = "0.32.2"
rayon = "1.7.0"
thiserror = "1.0.40"

[dev-dependencies]
approx = "0.5.1"
