[package]
name = "velvet-core"
version = "0.2.1"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
description = "Core feature library for the Velvet simulation engine."
license = "MIT"
repository = "https://github.com/seatonullberg/velvet"
edition = "2018"

[dependencies]
hdf5 = "0.7"
nalgebra = {version = "0.23", features = ["serde-serialize"]}
rand = {version = "0.7", features = ["serde1"] }
rand_distr = "0.3"
rayon = "1.5"
ron = "0.6"
serde = {version = "1.0", features = ["derive"]}
strum = "0.20"
strum_macros = "0.20"
typetag = "0.1.6"

[dev-dependencies]
approx = "0.4"
criterion = "0.3"
velvet-convert = { path = "../convert" }

[[bench]]
name = "integrator-benchmarks"
path = "benches/integrators.rs"
harness = false

[[bench]]
name = "property-benchmarks"
path = "benches/properties.rs"
harness = false

[[bench]]
name = "thermostat-benchmarks"
path = "benches/thermostats.rs"
harness = false