[package]
name = "velvet-core"
version = "0.3.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
description = "Core feature library for the Velvet simulation engine."
license = "MIT"
repository = "https://github.com/seatonullberg/velvet"
edition = "2018"

[dependencies]
hdf5 = "0.7"
indicatif = "0.15"
log = "0.4"
nalgebra = {version = "0.23", features = ["serde-serialize"]}
pretty_env_logger = "0.4"
rand = {version = "0.7", features = ["serde1"] }
rand_distr = "0.3"
serde = {version = "1.0", features = ["derive"]}
strum = "0.20"
strum_macros = "0.20"
typetag = "0.1.6"

[dev-dependencies]
approx = "0.4"
criterion = "0.3"
ron = "0.6"
velvet-convert = { path = "../convert", version = "0.1.1" }

[[bench]]
name = "integrator-benchmarks"
path = "benches/integrators.rs"
harness = false

[[bench]]
name = "property-benchmarks"
path = "benches/properties.rs"
harness = false

[[bench]]
name = "thermostat-benchmarks"
path = "benches/thermostats.rs"
harness = false

[[bench]]
name = "pair-potential-benchmarks"
path = "benches/potentials/pair.rs"
harness = false
