[package]
name = "velvet-core"
version = "0.4.2"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
description = "Core feature library for the Velvet simulation engine."
license = "MIT"
repository = "https://github.com/seatonullberg/velvet"
edition = "2018"

[dependencies]
libm = "0.2"
log = "0.4"
nalgebra = {version = "0.23", features = ["serde-serialize"]}
pretty_env_logger = "0.4"
rand = {version = "0.7", features = ["serde1"] }
rand_distr = "0.3"
serde = {version = "1.0", features = ["derive", "rc"]}
strum = "0.20"
strum_macros = "0.20"
typetag = "0.1.6"

hdf5 = { version = "0.7", optional = true }
hdf5-sys = { version = "0.7", optional = true }

[dev-dependencies]
approx = "0.4"

[features]
default = []
f64 = []
hdf5-output = ["hdf5", "hdf5-sys"]

[package.metadata.docs.rs]
features = ["hdf5-sys/static", "hdf5-sys/zlib"]