[package]
name = "velvet-test-utils"
version = "0.1.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.23"
vasp-poscar = "0.3.2"
velvet-core = { path = "../core" }
velvet-external-data = { path = "../external-data" }

[features]
f64 = ["velvet-core/f64", "velvet-external-data/f64"]