[package]
name = "velvet-core"
version = "0.4.2"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
description = "Core feature library for the Velvet simulation engine."
license = "MIT"
repository = "https://github.com/seatonullberg/velvet"
edition = "2018"

[dependencies]
indicatif = "0.15"
libm = "0.2"
nalgebra = "0.26"
rand = "0.7"
rand_distr = "0.3"
strum = "0.20"
strum_macros = "0.20"
uuid = { version = "0.8", features = ["v4"] }

hdf5 = { version = "0.7", optional = true }
hdf5-sys = { version = "0.7", optional = true }
rayon = { version = "1.5", optional = true }

[dev-dependencies]
approx = "0.4"
velvet-test-utils = { path = "../velvet-test-utils" }

[features]
default = []
f64 = []
hdf5-output = ["hdf5", "hdf5-sys"]
quiet = []

[package.metadata.docs.rs]
features = ["hdf5-sys/static", "hdf5-sys/zlib"]