[package]
name = "velvet-core"
version = "0.4.2"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
description = "Velvet's core functionality"
license = "MIT"
repository = "https://github.com/seatonullberg/velvet"
edition = "2021"

[dependencies]
libm = "0.2"
nalgebra = "0.29"
rand = "0.7"
rand_distr = "0.3"
rayon = "1.5"
strum = "0.20"
strum_macros = "0.20"
uuid = { version = "0.8", features = ["v4"] }
velvet-internals = { path = "../velvet-internals", version = "0.1.0" }
velvet-system = { path = "../velvet-system", version = "0.1.0" }

[dev-dependencies]
approx = "0.5"
velvet-chemfiles = { path = "../velvet-chemfiles" }
velvet-test-utils = { path = "../velvet-test-utils" }

[features]
default = []
f64 = [ "velvet-internals/f64", "velvet-system/f64" ]