[package]
name = "velvet-external-data"
version = "0.1.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
description = "Utilities to import and export external data formats."
license = "MIT"
repository = "https://github.com/seatonullberg/velvet"
edition = "2018"

[dependencies]
nalgebra = "0.23"
vasp-poscar = "0.3.2"
velvet-core = { path = "../velvet-core", version = "0.4.0" }

[dev-dependencies]
velvet-test-utils = { path = "../velvet-test-utils" }

[features]
f64 = ["velvet-core/f64"]