[package]
name = "velvet-test-utils"
version = "0.1.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
nalgebra = "0.29"
velvet-chemfiles = { path = "../velvet-chemfiles" }
velvet-system = { path = "../velvet-system" }

[features]
f64 = [
    "velvet-chemfiles/f64", 
    "velvet-system/f64",
]