[package]
name = "velvet-test-utils"
version = "0.1.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
nalgebra = "0.29"
velvet-chemfiles = { path = "../velvet-chemfiles", version = "0.1.0" }
velvet-system = { path = "../velvet-system", version = "0.1.0" }

[features]
f64 = [
    "velvet-chemfiles/f64", 
    "velvet-system/f64",
]